git-svn-id: https://www.seasar.org/svn/chura/trunk@261 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng-test/src/main/webapp/view/emp/empConfirm.html
+++ b/dolteng-test/src/main/webapp/view/emp/empConfirm.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../global.css"/>
 </head>
 <body>
-<form><input type="hidden" id="crudType" />
+<form id="form">
+<input type="hidden" id="crudType" />
 <div>
 <span id="messages"></span>
 </div>
