--- a/dolteng-test/src/main/webapp/view/emp/empList.html
+++ b/dolteng-test/src/main/webapp/view/emp/empList.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../global.css"/>
 </head>
 <body>
-<form>
+<form id="form">
 <input type="button" id="goEmpEdit" value="Create" onclick="location.href='empEdit.html'"/><br/>
 <table id="empGrid" width="300px" height="200px">
 	<colgroup>
