--- a/dolteng-test/src/main/webapp/view/emp/empEdit.html
+++ b/dolteng-test/src/main/webapp/view/emp/empEdit.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" type="text/css" href="../global.css"/>
 </head>
 <body>
-<form><input type="hidden" id="crudType" />
+<form id="form">
+<input type="hidden" id="crudType" />
 <div>
 <span id="messages"></span>
 </div>
