git-svn-id: https://www.seasar.org/svn/chura/trunk@266 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng-test/src/main/webapp/view/emp/empEdit.html
+++ b/dolteng-test/src/main/webapp/view/emp/empEdit.html
@@ -14,10 +14,10 @@
     <td><label id="empnoLabel">empno</label></td>
 	<td>
 	<div id="isCreate">
-		<input type="text" id="empno-input" />
+		<input type="text" id="empno" />
 	</div>
 	<div id="isNotCreate" style="display: none;">
-		<span id="empno">empno</span><input type="hidden" id="empno-hidden" />
+		<span id="empno-output">empno</span><input type="hidden" id="empno-hidden" />
 	</div>
 	</td>
 	<td><span id="empnoMessage"></span></td>
