--- a/template/projects.xml
+++ b/template/projects.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projects>
-	<project id="0" name="Base"　root="template/resources,template/licenses">
+	<project id="0" name="Base"　
+		root="template/resources,template/licenses,template/resources/data">
 		<handler type="default">
 			<entry kind="file" path="LICENSE.txt"/>
 			<entry path="licenses/"/>
@@ -9,6 +10,7 @@
 			<entry kind="file" path="licenses/LICENSE.junit.html"/>
 			<entry kind="file" path="licenses/LICENSE.ognl.txt"/>
 			<entry kind="file" path="licenses/NOTICE.txt"/>
+			<entry path="${libPath}/"/>
 			<entry path="${testLibPath}/"/>
 			<entry path="${mainJavaPath}/${packagePath}/dao"/>
 			<entry path="${mainJavaPath}/${packagePath}/dto"/>
@@ -42,6 +44,9 @@
 			<entry path="${testResourcePath}/"/>
 		</handler>
 		<handler type="classpath">
+			<entry kind="output" path="${testOutPath}"/>
+			<entry output="${webAppRoot}/WEB-INF/classes" path="${mainJavaPath}"/>
+			<entry output="${webAppRoot}/WEB-INF/classes" path="${mainResourcePath}"/>
 			<entry kind="con" path="${jreContainer}" />
 			<entry kind="file" path="${testLibPath}/junit-3.8.2.jar" />
 			<entry kind="file" path="${testLibPath}/junit-addons-1.4.jar" />
@@ -52,14 +57,28 @@
 			<entry kind="file" path="${libPath}/ognl-2.6.7.jar" />
 			<entry kind="file" path="${libPath}/poi-2.5.1-final-20040804.jar" />
 			<entry kind="file" path="${libPath}/h2-2006-11-03.jar" />
+			<entry kind="file" path="${libPath}/s2-extension-2.4.4.jar" />
+			<entry kind="file" path="${libPath}/s2-framework-2.4.4.jar" />
 		</handler>
-		<handler type="dolteng"/>
+		<handler type="dolteng">
+			<entry kind="file" path=".settings/dolteng.pref"/>
+		</handler>
 		<handler type="diigu"/>
 		<handler type="h2">
 			<entry kind="file" path="${mainResourcePath}/data/demo.sql"/>
 		</handler>
+		<handler type="jdt">
+			<entry kind="file" path=".settings/jdt.pref"/>
+		</handler>
 	</project>
-	<project id="1" name="Teeda Only" jre="1.4" root="template/1" extends="0">
+	<project id="10" name="Teeda Only" jre="1.4" root="template/WEB-INF,template/1" extends="0">
+		<description language="ja"><![CDATA[
+		Teedaは、Seasarファウンデーション発のJSF(JavaServer Faces)実装です。
+		「JSF meets DI x AOP」というコンセプトの元、JSFの標準機能に加え、
+		DIとAOPの機能をベースとした拡張機能を提供し、より良いWebアプリケーション開発を実現します。
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
 		<handler type="default">
 			<entry kind="file" path=".tomcatplugin"/>
 			<entry kind="file" path="${mainResourcePath}/appMessages.properties"/>
@@ -69,17 +88,30 @@
 			<entry kind="file" path="${mainResourcePath}/teedaCustomize.dicon"/>
 			<entry path="${webAppRoot}/view/error"/>
 			<entry kind="file" path="${webAppRoot}/view/error/error.html"/>
+			<entry path="${webAppRoot}/WEB-INF"/>
+			<entry kind="file" path="${webAppRoot}/WEB-INF/faces-config.xml"/>
+			<entry kind="file" path="${webAppRoot}/WEB-INF/web.xml"/>
 		</handler>
 		<handler type="classpath">
-			<entry kind="output" path="${testOutPath}"/>
 			<entry path="${webAppRoot}/view"/>
-			<entry output="${webAppRoot}/WEB-INF/classes" path="${mainJavaPath}"/>
-			<entry output="${webAppRoot}/WEB-INF/classes" path="${mainResourcePath}"/>
+			<entry kind="file" path="${libPath}/teeda-ajax-1.0.1.jar" />
+			<entry kind="file" path="${libPath}/teeda-core-1.0.1.jar" />
+			<entry kind="file" path="${libPath}/teeda-extension-1.0.1.jar" />
+			<entry kind="file" path="${libPath}/commons-collections-3.1.jar" />
+			<entry kind="file" path="${libPath}/commons-el-1.0.jar" />
+			<entry kind="file" path="${libPath}/jstl-1.1.2.jar" />
+			<entry kind="file" path="${libPath}/rhino-1.6r2.jar" />
+			<entry kind="file" path="${libPath}/teeda-xmlunit-0.1.0.jar" />
+			<entry kind="file" path="${libPath}/xercesImpl-2.6.2.jar" />
+			<entry kind="file" path="${libPath}/xmlParserAPIs-2.6.2.jar" />
+			<entry kind="file" path="${libPath}/xmlunit-1.0.jar" />
+			<entry kind="file" path="${testLibPath}/geronimo-jsp_2.0_spec-1.0.jar" />
+			<entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
 		</handler>
 		<handler type="tomcat"/>
 	</project>
-	<project id="1" name="Teeda + S2Dao" jre="1.4" root="template/1" extends="10">
-		<description language="ja"><![CDATA[		
+	<project id="11" name="S2Dao Only" jre="1.4" root="template/11" extends="0">
+		<description language="ja"><![CDATA[
 		]]></description>
 		<description language="en"><![CDATA[
 		]]></description>
@@ -87,11 +119,88 @@
 			<entry kind="file" path="${mainResourcePath}/dao.dicon"/>
 		</handler>
 		<handler type="classpath">
+			<entry kind="file" path="${libPath}/s2-dao-1.0.39.jar" />
 		</handler>
 	</project>
-	<project id="51" name="Teeda + S2Dao" jre="1.5" extends="2" root="template/51">
+	<project id="20" name="Teeda + S2Dao" jre="1.4" root="template/2" extends="10,11">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+	</project>
+	<project id="500" name="Base" root="template/500" extends="0">
 		<handler type="classpath">
-			<entry kind="file" path="src/main/webapp/WEB-INF/lib/s2-tiger-2.4.0-rc-3-SNAPSHOT.jar"/>
+			<entry kind="file" path="${libPath}/s2-tiger-2.4.4.jar"/>
 		</handler>
+	</project>
+	<project id="510" name="Teeda Only" jre="1.5" extends="500,10">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/teeda-tiger-1.0.1.jar"/>
+		</handler>
+	</project>
+	<project id="511" name="S2Dao Only" jre="1.5" extends="500,11">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/s2-dao-tiger-1.0.35.jar"/>
+		</handler>
+	</project>
+	<project id="520" name="Teeda + S2Dao" jre="1.5" extends="510,511">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/s2-dao-tiger-1.0.35.jar"/>
+		</handler>
+	</project>
+	<project id="530" name="Uuji Only" jre="1.5" root="template/530" extends="500">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/uuji-1.0-beta-1-SNAPSHOT.jar"/>
+		</handler>
+	</project>
+	<project id="531" name="Super Agile" jre="1.5" root="template/53" extends="530,510">
+		<description language="ja"><![CDATA[
+		Seasar2.4 + Teeda + Uuji + Dolteng
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+	</project>
+	<project id="540" name="KuinaDao Only" jre="1.5" root="template/540" extends="500">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/antlr-2.7.6.jar"/>
+			<entry kind="file" path="${libPath}/commons-lang-2.1.jar"/>
+			<entry kind="file" path="${libPath}/dom4j-1.6.1.jar"/>
+			<entry kind="file" path="${libPath}/ehcache-1.2.jar"/>
+			<entry kind="file" path="${libPath}/ejb3-persistence-3.0.jar"/>
+			<entry kind="file" path="${libPath}/hibernate-3.2.0.ga.jar"/>
+			<entry kind="file" path="${libPath}/hibernate-annotations-3.2.0.ga.jar"/>
+			<entry kind="file" path="${libPath}/hibernate-entitymanager-3.2.0.ga.jar"/>
+			<entry kind="file" path="${libPath}/jboss-archive-browsing-5.0.0alpha-200607201-119.jar"/>
+			<entry kind="file" path="${libPath}/kuina-dao-1.0.0-rc1-SNAPSHOT.jar"/>
+			<entry kind="file" path="${libPath}/lucene-1.4.3.jar"/>
+			<entry kind="file" path="${libPath}/s2hibernate-jpa-1.0.0-rc1-SNAPSHOT.jar"/>
+		</handler>
+	</project>
+	<project id="541" name="Easy Enterprise" jre="1.5" root="template/50" extends="540,510">
+		<description language="ja"><![CDATA[
+		Seasar2.4 + Teeda + KuinaDao + S2Hibernate-JPA + Dolteng
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
 	</project>
 </projects>
