やっとここまで戻ってきた。後もう少し・・・
git-svn-id: https://www.seasar.org/svn/chura/trunk@338 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -63,7 +63,7 @@
 		</handler>
 		<handler type="diigu"/>
 		<handler type="h2">
-			<entry kind="file" path="${mainResourcePath}/data/"/>
+			<entry path="${mainResourcePath}/data/"/>
 			<entry kind="file" path="${mainResourcePath}/data/demo.sql"/>
 		</handler>
 		<handler type="jdt">
