--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -137,7 +137,7 @@
 			<entry kind="file" path="${libPath}/geronimo-ejb_2.1_spec-1.0.jar"/>
 		</handler>
 	</project>
-	<project id="510" name="Teeda Only" jre="1.5" extends="10,500">
+	<project id="510" name="Teeda Only" jre="1.5" root="template/500" extends="10,500">
 		<description language="ja"><![CDATA[
 		]]></description>
 		<description language="en"><![CDATA[
