--- a/template/projects.xml
+++ b/template/projects.xml
@@ -14,6 +14,7 @@
 			<entry path="${mainJavaPath}/${packagePath}/dxo"/>
 			<entry path="${mainJavaPath}/${packagePath}/entity"/>
 			<entry path="${mainJavaPath}/${packagePath}/helper"/>
+			<entry path="${mainJavaPath}/${packagePath}/converter"/>
 			<entry path="${mainJavaPath}/${packagePath}/interceptor"/>
 			<entry path="${mainJavaPath}/${packagePath}/logic"/>
 			<entry path="${mainJavaPath}/${packagePath}/service"/>
