git-svn-id: https://www.seasar.org/svn/chura/trunk@389 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -123,7 +123,7 @@
 			<entry kind="file" path="${libPath}/s2-dao-1.0.39.jar" />
 		</handler>
 	</project>
-	<project id="20" name="Teeda + S2Dao" jre="1.4" root="template/20" extends="10,11" order="C01">
+	<project id="20" name="Super Agile(S2Dao)" jre="1.4" root="template/20" extends="10,11" order="C01">
 		<description language="ja"><![CDATA[
 		]]></description>
 		<description language="en"><![CDATA[
