git-svn-id: https://www.seasar.org/svn/chura/trunk@392 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -153,7 +153,7 @@
 			<entry kind="file" path="${libPath}/s2-dao-tiger-1.0.35.jar"/>
 		</handler>
 	</project>
-	<project id="520" name="Super Agile(S2Dao)" jre="1.5" root="template/520" extends="20,510,511" order="TC01">
+	<project id="520" name="Teeda + S2Dao" jre="1.5" root="template/520" extends="20,510,511" order="TC01">
 		<description language="ja"><![CDATA[
 		]]></description>
 		<description language="en"><![CDATA[
