git-svn-id: https://www.seasar.org/svn/chura/trunk@408 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -191,6 +191,7 @@
 			<entry kind="file" path="${libPath}/dom4j-1.6.1.jar"/>
 			<entry kind="file" path="${libPath}/ehcache-1.2.jar"/>
 			<entry kind="file" path="${libPath}/ejb3-persistence-3.0.jar"/>
+			<entry kind="file" path="${libPath}/geronimo-j2ee_1.4_spec-1.0.jar"/>
 			<entry kind="file" path="${libPath}/hibernate-3.2.1.ga.jar"/>
 			<entry kind="file" path="${libPath}/hibernate-annotations-3.2.1.ga.jar"/>
 			<entry kind="file" path="${libPath}/hibernate-entitymanager-3.2.1.ga.jar"/>
